tests/should_fail/let_destructure_cons_on_string2.nv
module test
// let destructure: cons pattern on String (not a list)
let s = "hello"
let [h, ..t] = s
